# qzbot

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
qzbot/: __init__.py
qzbot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/qzbot/: config.py  get_notification.py  get_pending_approval_resources.py  get_resources.py  like_message.py  notification.py  post.py  resources.py  sign_in.py  upload_resource.py  ws.py
src/qzbot.egg-info/: PKG-INFO  SOURCES.txt
tests/: resources.py  ws.py
